Thu Nov 11 13:57:27 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* doc/o_dbm.jp.rd: README.jpから移動
	* Makefile: docタグ追加

Thu Nov 11 13:48:49 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile README.jp, TODO, test-o_dbm.rb: 追加
	* o_dbm.rb: 旧版最終版

Thu Nov 11 01:31:45 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* o_dbm.rb: RCS Rev1.9

Thu Nov 11 01:30:52 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* o_dbm.rb: RCS Rev1.8

Thu Nov 11 01:30:20 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* o_dbm.rb: RCS Rev1.7

Thu Nov 11 01:29:41 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

  	* o_dbm.rb: RCS Rev1.6

Thu Nov 11 01:27:17 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* o_dbm.rb: RCS Rev1.5

Thu Nov 11 01:26:26 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* o_dbm.rb: RCS Rev1.4

Thu Nov 11 01:25:39 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* o_dbm.rb: RCS Rev1.3

Thu Nov 11 01:24:41 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* o_dbm.rb: RCS Rev1.2

Thu Nov 11 01:01:54 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* o_dbm.rb: first version

Local variables:
add-log-time-format: (lambda ()
  (let* ((time (current-time))
	 (system-time-locale "C")
	 (diff (+ (cadr time) 32400))
	 (lo (% diff 65536))
	 (hi (+ (car time) (/ diff 65536))))
  (format-time-string "%a %b %e %H:%M:%S %Y" (list hi lo) t)))
indent-tabs-mode: t
tab-width: 8
end: